# pdforum

./: Cargo.toml  LICENSE  README.md  TODO.md  database_setup.sql  demo.webm  example.typ
src/: database.rs  main.rs  render.rs  routes.rs
src/routes/: browse.rs  creds.rs  like.rs  mod.rs  post.rs  publish.rs
templates/: browse.typ  common.typ  credentials.typ  error.typ  header.typ  homepage.typ  keyboard.typ  post.typ  publish.typ  register.typ
