[package]
name = "pdforum"
version = "254.50.582183" # a large version number implies project maturity and thus the reader expects more intelligent design (despite the fact that there is none to be found)
edition = "2021"
description = "pdf-only social media. who thought this was a good idea"
license = "MIT"
homepage = "https://pdforum.meow.i.ng" # TODO: Actually host this
repository = "https://github.com/GoldenStack/pdforum/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
chrono = "0.4.38"
comemo = "0.4.0"
ecow = "0.2.2"
parking_lot = "0.12.3"
tokio = { version = "1.40.0", features = ["full"] }
typst = "0.12.0"
typst-assets = "0.12.0"
typst-cli = "0.12.0"
typst-kit = "0.12.0"
typst-pdf = "0.12.0"

