[package]
name = "pdforum"
version = "254.50.582183" # a large version number implies project maturity and thus the reader expects more intelligent design (despite the fact that there is none to be found)
edition = "2021"
description = "pdf-only social media. who thought this was a good idea"
license = "MIT"
homepage = "https://pdforum.meow.i.ng" # TODO: Actually host this
repository = "https://github.com/GoldenStack/pdforum/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
chrono = "0.4.38"
comemo = "0.4.0"
dotenvy = "0.15.7"
ecow = "0.2.3"
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = "1.0.215"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "time"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tower-sessions = "0.13.0"
typst = "0.12.0"
typst-kit = "0.12.0"
typst-pdf = "0.12.0"
